--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   shared_preferences: ^2.5.3
@@ -40,6 +39,8 @@ dependencies:
   toast: ^0.3.0
   fluttertoast: ^8.2.12
   loading_animation_widget: ^1.3.0
+  google_fonts: ^6.3.0
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
