recent ui changes

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "getxmvvm",
-    "short_name": "getxmvvm",
+    "name": " habitsbegone",
+    "short_name": " habitsbegone",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
