--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: getxmvvm
+name: habitsbegone
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+ 
+
 
 
   cupertino_icons: ^1.0.8
@@ -41,17 +43,27 @@ dependencies:
   loading_animation_widget: ^1.3.0
   google_fonts: ^6.3.0
   flutter_svg: ^2.2.0
+  flutter_launcher_icons: ^0.13.1 # check pub.dev for latest
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_foreground: "assets/images/app_icon.png" # optionals  
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  
   flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
