--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "getxmvvm" "\0"
+            VALUE "FileDescription", " habitsbegone" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "getxmvvm" "\0"
+            VALUE "InternalName", " habitsbegone" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "getxmvvm.exe" "\0"
-            VALUE "ProductName", "getxmvvm" "\0"
+            VALUE "OriginalFilename", " habitsbegone.exe" "\0"
+            VALUE "ProductName", " habitsbegone" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
