--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ dependencies:
   google_fonts: ^6.3.0
   flutter_svg: ^2.2.0
   flutter_launcher_icons: ^0.13.1 # check pub.dev for latest
+  scroll_wheel_selector: ^0.0.2
+  square_in_app_payments: ^1.7.11
+  cloud_functions: ^6.0.2
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
+  firebase_storage: ^13.0.2
+  firebase_messaging: ^16.0.2
 
 
 dev_dependencies:
