--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_storage: ^13.0.2
   firebase_messaging: ^16.0.2
   file_picker: ^10.3.3
+  video_player: ^2.10.0
+  video_thumbnail: ^0.5.6
 
 
 dev_dependencies:
