--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   file_picker: ^10.3.3
   video_player: ^2.10.0
   video_thumbnail: ^0.5.6
+  open_filex: ^4.7.0
 
 
 dev_dependencies:
