--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   video_player: ^2.10.0
   video_thumbnail: ^0.5.6
   open_filex: ^4.7.0
+  url_launcher: ^6.3.2
 
 
 dev_dependencies:
