--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,19 +16,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   shared_preferences: ^2.5.3
-  http: ^1.3.0
+  http: ^1.5.0
   toast: ^0.3.0
   fluttertoast: ^8.2.12
   loading_animation_widget: ^1.3.0
   google_fonts: ^6.3.0
   flutter_svg: ^2.2.0
-  flutter_launcher_icons: ^0.13.1 # check pub.dev for latest
+  flutter_launcher_icons: ^0.13.1
   scroll_wheel_selector: ^0.0.2
-  square_in_app_payments: ^1.7.11
-  cloud_functions: ^6.0.2
-  firebase_core: ^4.1.1
-  firebase_auth: ^6.1.0
-  cloud_firestore: ^6.0.2
+  cloud_functions: ^6.0.3
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  cloud_firestore: ^6.0.3
   firebase_storage: ^13.0.2
   firebase_messaging: ^16.0.2
   file_picker: ^10.3.3
@@ -36,6 +35,8 @@ dependencies:
   video_thumbnail: ^0.5.6
   open_filex: ^4.7.0
   url_launcher: ^6.3.2
+  provider: ^6.1.5+1
+  flutter_stripe: ^12.1.0
 
 
 dev_dependencies:
